# Autonomous-Stack

./: CrossPurePursuit.py  Path2.txt  PurePursuitAlgorithm.py  readme.md
Filter/: EKF.cpp  Kalman2.cpp  gps_data.txt  imu_data.txt
GlobalPathPlanning/: Astar.cpp  a.out
KalmanFilter/KalmanIsEasy/src/: 01.AvgFilter.cpp  02.MovAvgFilter.cpp  03.low_pass_filter.cpp  04.simple_kalman.cpp  05.dvKalman.cpp  your_program
KalmanFilter/잡것/: EKF  Kalman1.cpp  a.out  example
Map/: path1.txt  path3.txt
Tracking/: PurePursuitAlgorithm.py
Tracking/PurePursuit/: CrossPurePursuit.py
Tracking/tracking/: CMakeLists.txt  package.xml
Tracking/tracking/include/: cpprobotics_types.h  cubic_spline.h  motion_model.h
Tracking/tracking/msg/: init.msg
Tracking/tracking/src/: LQR.cpp  LQR2.cpp  PID.cpp  PurePursuit.cpp  cubic_spline_planner.cpp  lqr_speed_steer_control.cpp
devel/: .catkin  .rosinstall  _setup_util.py
devel/include/Tracking_pkg/: CtrlCmd.h
devel/include/gpsimu_pkg/: INS.h  gpsimu_msg.h
devel/include/morai_tutorial/: test2.h  test_msg.h
devel/include/msg_tutorial/: nameyear.h
devel/include/plnctrl/: CtrlCmd.h  GNSSInfo.h  coeff.h  fusInfo.h  fussInfo.h  objInfo.h  objsInfo.h  signalInfo.h  totalInfo.h
devel/include/test_pkg/: test_msg.h
devel/include/tracking_pkg/: CtrlCmd.h
devel/lib/Tracking_pkg/: con
devel/lib/gpsimu_pkg/: gps
devel/lib/morai_tutorial/: ex  give  gps2  map2  pub2  pubsub  receive  sinho  sub2  track  track02
devel/lib/pkgconfig/: Tracking_pkg.pc  gpsimu_pkg.pc  morai_msgs.pc  morai_standard.pc  morai_tutorial.pc  msg_tutorial.pc  my_morai_tutorial.pc  plnctrl.pc  test_pkg.pc  tracking_pkg.pc
devel/lib/python3/dist-packages/Tracking_pkg/msg/: _CtrlCmd.py  __init__.py
devel/lib/python3/dist-packages/gpsimu_pkg/msg/: _INS.py  __init__.py  _gpsimu_msg.py
devel/lib/python3/dist-packages/morai_tutorial/msg/: __init__.py  _test2.py  _test_msg.py
devel/lib/python3/dist-packages/msg_tutorial/msg/: __init__.py  _nameyear.py
devel/lib/python3/dist-packages/plnctrl/msg/: _CtrlCmd.py  _GNSSInfo.py  __init__.py  _coeff.py  _fusInfo.py  _fussInfo.py  _objInfo.py  _objsInfo.py  _signalInfo.py  _totalInfo.py
devel/lib/python3/dist-packages/test_pkg/msg/: __init__.py  _test_msg.py
devel/lib/python3/dist-packages/tracking_pkg/msg/: _CtrlCmd.py
devel/lib/test_pkg/: pub  sub
devel/lib/tracking_pkg/: con
devel/share/Tracking_pkg/cmake/: Tracking_pkg-msg-extras.cmake  Tracking_pkg-msg-paths.cmake  Tracking_pkgConfig.cmake
devel/share/common-lisp/ros/Tracking_pkg/msg/: CtrlCmd.lisp  Tracking_pkg-msg.asd  _package.lisp  _package_CtrlCmd.lisp
devel/share/common-lisp/ros/gpsimu_pkg/msg/: INS.lisp  _package.lisp  _package_INS.lisp  _package_gpsimu_msg.lisp  gpsimu_msg.lisp  gpsimu_pkg-msg.asd
devel/share/common-lisp/ros/morai_msgs/msg/: _package.lisp  morai_msgs-msg.asd
devel/share/common-lisp/ros/morai_tutorial/msg/: _package.lisp  _package_test2.lisp  _package_test_msg.lisp  morai_tutorial-msg.asd  test2.lisp  test_msg.lisp
devel/share/common-lisp/ros/msg_tutorial/msg/: _package.lisp  _package_nameyear.lisp  msg_tutorial-msg.asd  nameyear.lisp
devel/share/common-lisp/ros/plnctrl/msg/: CtrlCmd.lisp  GNSSInfo.lisp  _package.lisp  _package_CtrlCmd.lisp  _package_GNSSInfo.lisp  _package_coeff.lisp  _package_fusInfo.lisp  _package_objsInfo.lisp  _package_signalInfo.lisp  _package_totalInfo.lisp  coeff.lisp  fusInfo.lisp  fussInfo.lisp  objInfo.lisp  objsInfo.lisp  plnctrl-msg.asd  signalInfo.lisp  totalInfo.lisp
devel/share/common-lisp/ros/test_pkg/msg/: _package.lisp  _package_test_msg.lisp  test_msg.lisp  test_pkg-msg.asd
devel/share/common-lisp/ros/tracking_pkg/msg/: CtrlCmd.lisp  _package.lisp  _package_CtrlCmd.lisp  tracking_pkg-msg.asd
devel/share/gennodejs/ros/Tracking_pkg/msg/: CtrlCmd.js  _index.js
devel/share/gennodejs/ros/gpsimu_pkg/msg/: INS.js  _index.js  gpsimu_msg.js
devel/share/gpsimu_pkg/cmake/: gpsimu_pkg-msg-paths.cmake  gpsimu_pkgConfig.cmake
devel/share/morai_msgs/cmake/: morai_msgs-msg-paths.cmake  morai_msgsConfig.cmake
devel/share/morai_standard/cmake/: morai_standardConfig.cmake
devel/share/morai_tutorial/cmake/: morai_tutorial-msg-extras.cmake  morai_tutorial-msg-paths.cmake  morai_tutorialConfig.cmake
devel/share/msg_tutorial/cmake/: msg_tutorial-msg-paths.cmake  msg_tutorialConfig.cmake
devel/share/my_morai_tutorial/cmake/: my_morai_tutorialConfig.cmake
devel/share/plnctrl/cmake/: plnctrl-msg-paths.cmake  plnctrlConfig.cmake
devel/share/roseus/ros/Tracking_pkg/: manifest.l
devel/share/roseus/ros/gpsimu_pkg/: manifest.l
devel/share/roseus/ros/morai_msgs/: manifest.l
devel/share/roseus/ros/morai_tutorial/: manifest.l
devel/share/roseus/ros/msg_tutorial/: manifest.l
devel/share/roseus/ros/plnctrl/: manifest.l
devel/share/roseus/ros/test_pkg/: manifest.l
devel/share/roseus/ros/tracking_pkg/: manifest.l
devel/share/test_pkg/cmake/: test_pkg-msg-extras.cmake  test_pkg-msg-paths.cmake  test_pkgConfig.cmake
devel/share/tracking_pkg/cmake/: tracking_pkg-msg-paths.cmake  tracking_pkgConfig.cmake
src/Tracking_pkg/: CMakeLists.txt  package.xml
src/Tracking_pkg/src/: map.txt  map_save.cpp  path_tracking.cpp
src/gpsimu_pkg/: CMakeLists.txt  package.xml
src/gpsimu_pkg/msg/: INS.msg  gpsimu_msg.msg
src/gpsimu_pkg/src/: gpsimu.cpp  ins.cpp  ins_b.cpp
src/morai_tutorial/: CMakeLists.txt
src/morai_tutorial/include/: tracking02.cpp
src/morai_tutorial/msg/: test2.msg  test_msg.msg
src/morai_tutorial/src/: control_car_for_data.cpp  get_sinho.cpp  gpsdata.cpp  map.txt  map02.txt  map_save.cpp  pub.cpp  receive_car_data.cpp  sub.cpp  subpub.cpp  tracking02.cpp  tracking_ex.cpp
src/msg_tutorial/: CMakeLists.txt  package.xml
src/msg_tutorial/msg/: nameyear.msg
src/test_pkg/: CMakeLists.txt
src/test_pkg/msg/: test_msg.msg
src/test_pkg/src/: pub_src.cpp  sub_src.cpp
(+37 files in other folders)
